--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
 
-  simple_server:
-    build: simple_server
+  simple_service:
+    build: simple_service
     command: python server.py
     environment:
       #- PLUGIT_API_URL=
@@ -11,7 +11,7 @@ services:
       - PLUGIT_BASE_URL=/
       - PLUGIT_DEBUG=1
     volumes:
-      - ./simple_server/:/code
+      - ./simple_service/:/code
     ports:
       - "5000:5000"
 
@@ -19,10 +19,10 @@ services:
     build: standalone_proxy
     command: python manage.py runserver 0.0.0.0:4000
     links:
-      - simple_server
+      - simple_service
     environment:
       - TEST=1
-      - PLUGIT_SERVER=http://simple_server:5000
+      - PLUGIT_SERVER=http://simple_service:5000
       - PLUGIT_SERVER_BASEURI=/
     ports:
       - "4000:4000"
