--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ python:
   - "2.7"
 install:
   - pip install .
-script: nosetests tests
+  - pip install coveralls
+script:
+  nosetests --with-coverage --cover-package=plugit --cover-package=plugit_proxy --cover-package=plugIt tests
+after_success:
+  coveralls
