--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install .
   - pip install coveralls
 script:
-  nosetests --with-coverage --cover-package=plugit --cover-package=plugit_proxy --cover-package=plugIt tests
+  nosetests --with-coverage --cover-package=plugit --cover-package=plugit_proxy --cover-package=plugIt tests -s
 after_success:
   coveralls
